welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
while (estSurBiscuit() != true && porteBiscuit() != true){
^