welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estSurBiscuit() != true && porteBiscuit() != true){
	recule();
}
while (estSurBiscuit() == true){
	while (portebiscuit() == false){
		prendBiscuit();
	}
